# socketcan_mcap_logger

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.txt
config/: config.yaml
inc/: BuildFileDescriptorSet.h  CanLoggingChannel.h  DBCCollection.h  Listener.h  McapCanLogger.h  McapLogger.h  McapWriter.h  MyLog.h  ProtoCollection.h  RawCanToProtoMsg.h  UdpPub.h
services/: mcl.service
src/: BuildFileDescriptorSet.cpp  CanLoggingChannel.cpp  DBCCollection.cpp  Listener.cpp  McapCanLogger.cpp  McapWriter.cpp  MyLog.cpp  ProtoCollection.cpp  RawCanToProtoMsg.cpp  UdpPub.cpp  main.cpp
